# Agent-Memory-Kit

./: .gitignore  .npmignore  AGENTS.md  LICENSE  README.md  package.json  pyproject.toml
.aimem/: config.json  manifest.json
.aimem/hooks/: consolidate_memory.py  inject_memory.py  manage_memory.py
.aimem/index/: project.json
.aimem/memory/: TEMPLATE.md  project.md
.aimem/memory/agents/: README.md
.github/: copilot-instructions.md
.github/agents/: generate-project-instructions.agent.md  memory-curator.agent.md  memory-initializer.agent.md
.github/hooks/: aimem-memory.json  lesson-learning.json
.github/instructions/: aimem-memory.instructions.md
.github/prompts/: generate-project-instructions.prompt.md  lesson-learning.prompt.md
.github/skills/generate-project-instructions/: SKILL.md
.github/skills/lesson-learning/: SKILL.md
.github/workflows/: ci.yml
.kiro/agents/: generate-project-instructions.md  memory-curator.md  memory-initializer.md
.kiro/hooks/: aimem-memory.kiro.hook
.kiro/prompts/: generate-project-instructions.md
.kiro/settings/: mcp.json
.kiro/skills/generate-project-instructions/: SKILL.md
.kiro/skills/lesson-learning/: SKILL.md
.kiro/steering/: aimem-memory.md  structure.md
scripts/: check_version_sync.py
src/aimem/: __init__.py  __main__.py  cli.py
src/aimem/commands/: __init__.py  init.py  mcp_server.py
src/aimem/core/: __init__.py  config.py  environment.py  manifest.py  memory_store.py  paths.py  prompts.py  rendering.py  vector_db.py  writer.py
src/aimem/mcp/: __init__.py  server.py
src/aimem/templates/: __init__.py  loader.py
src/aimem/templates/agents/: claude_generate_project_instructions.md  kiro_generate_project_instructions.md
src/aimem/templates/claude/: lesson_learning.md  project_knowledge_examples.md  project_knowledge_reference.md  project_knowledge_skill.md
src/aimem/templates/copilot/: hook_aimem_memory.json  (+6 more)
tests/: conftest.py  test_cli.py  test_generated_artifacts.py  test_hook_scripts.py  test_idempotency.py  test_init.py  test_manifest.py  test_mcp_server.py  test_mcp_service.py  test_rendering.py
(+27 files in other folders)
